; ModuleID = '/home/carl/AnghaBench/mpv/options/extr_m_property.c_m_properties_print_help_list.c'
source_filename = "/home/carl/AnghaBench/mpv/options/extr_m_property.c_m_properties_print_help_list.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mp_log = type { i32 }
%struct.m_property = type { i32 }

@.str = private unnamed_addr constant [7 x i8] c"Name\0A\0A\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c" %s\0A\00", align 1
@.str.2 = private unnamed_addr constant [23 x i8] c"\0ATotal: %d properties\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @m_properties_print_help_list(%struct.mp_log* %0, %struct.m_property* %1) #0 {
  %3 = alloca %struct.mp_log*, align 8
  %4 = alloca %struct.m_property*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.m_property*, align 8
  store %struct.mp_log* %0, %struct.mp_log** %3, align 8
  store %struct.m_property* %1, %struct.m_property** %4, align 8
  store i32 0, i32* %5, align 4
  %8 = load %struct.mp_log*, %struct.mp_log** %3, align 8
  %9 = call i32 (%struct.mp_log*, i8*, ...) @mp_info(%struct.mp_log* %8, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  store i32 0, i32* %6, align 4
  br label %10

10:                                               ; preds = %30, %2
  %11 = load %struct.m_property*, %struct.m_property** %4, align 8
  %12 = load i32, i32* %6, align 4
  %13 = sext i32 %12 to i64
  %14 = getelementptr inbounds %struct.m_property, %struct.m_property* %11, i64 %13
  %15 = getelementptr inbounds %struct.m_property, %struct.m_property* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %33

18:                                               ; preds = %10
  %19 = load %struct.m_property*, %struct.m_property** %4, align 8
  %20 = load i32, i32* %6, align 4
  %21 = sext i32 %20 to i64
  %22 = getelementptr inbounds %struct.m_property, %struct.m_property* %19, i64 %21
  store %struct.m_property* %22, %struct.m_property** %7, align 8
  %23 = load %struct.mp_log*, %struct.mp_log** %3, align 8
  %24 = load %struct.m_property*, %struct.m_property** %7, align 8
  %25 = getelementptr inbounds %struct.m_property, %struct.m_property* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = call i32 (%struct.mp_log*, i8*, ...) @mp_info(%struct.mp_log* %23, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0), i32 %26)
  %28 = load i32, i32* %5, align 4
  %29 = add nsw i32 %28, 1
  store i32 %29, i32* %5, align 4
  br label %30

30:                                               ; preds = %18
  %31 = load i32, i32* %6, align 4
  %32 = add nsw i32 %31, 1
  store i32 %32, i32* %6, align 4
  br label %10

33:                                               ; preds = %10
  %34 = load %struct.mp_log*, %struct.mp_log** %3, align 8
  %35 = load i32, i32* %5, align 4
  %36 = call i32 (%struct.mp_log*, i8*, ...) @mp_info(%struct.mp_log* %34, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.2, i64 0, i64 0), i32 %35)
  ret void
}

declare dso_local i32 @mp_info(%struct.mp_log*, i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
